links header  added

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,13 @@
 @use './fonts.scss';
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #000000;
   font-family: 'Encode Sans Expanded';
+  scroll-behavior: smooth;
 }
 .App {
   text-align: center;
