--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,11 @@ body {
   background: #000000;
   font-family: 'Encode Sans Expanded';
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .App {
   text-align: center;
@@ -52,8 +57,8 @@ body {
 .text-shadow-black {
   text-shadow: #000000 -2px 2px 5px;
 }
-.box-shadow-black {
-  box-shadow: #ffffff -2px 2px 5px;
+.boxShadow-black {
+  boxshadow: #ffffff -2px 2px 5px;
 }
 .social-icon {
   border-radius: 50%;
