Resume Updated with data.json

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -80,3 +80,7 @@ body {
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
 }
+
+ul > li.item_description {
+  color: #ff9c00;
+}
