--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,5 @@
 @use './fonts.scss';
+@import 'keyframes.scss';
 
 html {
   scroll-behavior: smooth;
@@ -14,51 +15,13 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 // utilities
 .text-shadow-black {
   text-shadow: #000000 -2px 2px 5px;
 }
 .boxShadow-black {
-  boxshadow: #ffffff -2px 2px 5px;
+  box-shadow: #ffffff -2px 2px 5px;
 }
 .social-icon {
   border-radius: 50%;
@@ -83,4 +46,21 @@ body {
 
 ul > li.item_description {
   color: #ff9c00;
+}
+
+a.project_link {
+  color: #ff9c00;
+}
+
+span.skill {
+  color: #ff9c00;
+  display: inline-flex;
+  margin: 0 16px;
+  cursor: default;
+  &::before {
+    content: '#';
+  }
+  &:hover {
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  }
 }
