bold span skill on hover

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -62,5 +62,6 @@ span.skill {
   }
   &:hover {
     animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    font-weight: bold;
   }
 }
